--- a/Sales.html
+++ b/Sales.html
@@ -117,7 +117,7 @@
 			
 			
       <div class="grid-span">
-        <h2>Tony Scott RC45 52mm stroke crankshaft</h2>
+        <h2>Tony Scott RC45 52mm stroke crankshaft - £2300</h2>
 		I am led to believe this is the one remaining long stroke RC45 crankshaft; designed by Tony Scott and manufactured by Honda on his behalf. Used by Milky Quale in the isle of man TT and most recently used by myself between 2017-2018. It has now been put up for sale to fund the manufacture of shorter stroke; higher revving engine.
 		What you get is the 52mm stroke crankshaft complete with Carrillo rods and bearing shells. The rods have completed approximately 100 miles of racing from new along with 4 hours of dyno tuning. They were custom made to my design by CP-Carrillo in America for £2000 and are suitable to take both standard and HRC RC45 pistons. The crankshaft is dynamically balanced with lead inserts into the counterweights to suit these rods and HRC pistons
 			<div class="banner">
@@ -126,11 +126,16 @@
 			<img src="img/52mmcrank.jpg" class="category-banner" alt="long stroke crank"></a>
 			<span class="image-text-banner">Long stroke crankshaft</span>
 			</div>
+        <div class="banner2">
+			<a target="_blank" href="img/conrods.jpg">
+			<img src="img/conrods.jpg" class="category-banner" alt="conrods"></a>
+			<span class="image-text-banner">Carrillo conrods</span>
+			</div>
 		    </div>
 			</div>
 	  	  
       <div class="grid-left-two">
-        <h2>HRC kit cylinder heads complete</h2>
+        <h2>HRC kit cylinder heads complete - £2600</h2>
         These are a pair of kit cylinder heads used by Honda racing team. The valve springs, camshafts and spring washers are all HRC kit specification. The valve springs all measure within 0.1mm of each other showing excellent condition.
       The cam sprockets are adjustable and I have set them back to the standard HRC kit specification:<br />
 	  inlet opens 23 btdc<br />
@@ -153,7 +158,7 @@
 			</div>
 			
 			<div class="grid-span">
-        <h2>HRC kit valve springs</h2>
+        <h2>HRC kit valve springs - £250</h2>
 		Spare kit springs to suit a HRC head setup. These springs give higher pressures at base and full lift to prevent unwanted valve reverberations and bounce at high RPM. The springs should be used with the right spring seats to set the correct installed height and pressure.
 		The springs are in immaculate condition; all measuring to new sizes.
 			<div class="banner">
@@ -166,11 +171,11 @@
 			</div>
 		  		
       <div class="grid-wide-center">
-        <h2>Exhausts</h2>
+        <h2>  VFR800 Exhaust - £1500</h2>
 		Here for sale is a 4-2 lobster section exhaust system to suit a vfr800. The system is designed to work with cylinders firing on 450 degree separation so that the scavenging effect pulls exhaust gases from the linked cylinders to best aid mid range gas flow.
-		The primary and secondary pipe sizes used are a larger diameter than standard and work best with throttle bodies between 43-45mm bore size and high lift cam's with medium to long duration.
+		The primary and secondary pipe sizes used are a larger diameter than standard and work best with throttle bodies between 43-45mm bore size and high lift cam's with medium to long duration.<br/>
 		The primary lengths are intentionally uneven in length to give a broader torque range. See the attached dyno file to show the power produced using this exhaust system. Note that in order to benefit from this system, larger throttle bodies, high lift camshaft with longer duration and ported cylinder heads are required, as well as refined fuelling and igntion adjustment. The dyno chart attached was from a tuned engine with all of these along with 43mm throttle bodies in an 838cc engine.
-		This system was made using 0.9mm thick stainless steel. <br />
+		This system was made using 0.9mm thick stainless steel. <br/>
         Titanium silencers can be made to order separately and weigh just 0.5kg each.
 		The exhaust system was used exclusively on a race bike and as such the rearward mounting bracket will not directly fit to a road subframe unit. Assume you will need to fabricate an additional bracket to support the rear of the exhaust system.
 			<div class="banner">
@@ -203,7 +208,7 @@
 			</div>
 		
       <div class="grid-narrow-center">
-        <h2>Slipper clutch conversion (Available mid 2019)</h2>
+        <h2>Slipper clutch conversion (Available mid 2019) - £TBC</h2>
 		This kit comprises a new sand cast outter engine cover. The clutch is a basket is machined from 7075 and hard anodised.
 		The kit is interchangeable between a vfr800 and RC45 using the same plates and spring tension.
 		With these race derived parts you can expect small gains due to a reduction of components creating oil drag and less oil contamination through clutch plate degradation in the oil bath.
@@ -218,7 +223,7 @@
 			</div>
 			
 	  		<div class="grid-narrow-center">
-        <h2>Race silencers</h2>
+        <h2>Race silencers - £450</h2>
 		PARKES exhausts cans with optional db killer inserts. Extensively fabricated from 0.9mm grade 2 titanium. Cans are avaliable in different lengths and mounting options.
 		All cans are fabricated and fusion welded by hand so please be aware there is a 4 week lead time for every can made.
 			<div class="image-left-container" width="430px">
