--- a/Sales.html
+++ b/Sales.html
@@ -112,8 +112,9 @@
 
             <div class="main-container">
 			<div class="grid-span">
-	  		My next challenge is to design and make my own engine. Sand casting crankcases will require some savings to buy the necessary kit for the job. So up for sale are some of the rare excotic race parts I have used over the years. Keep an eye out in the coming future for more special parts up for sale.
-      </div>
+	  		My next challenge is to design and make my own engine. Sand casting crankcases will require some savings to buy the necessary kit for the job. So up for sale are some of the rare excotic race parts I have used over the years. Keep an eye out in the coming future for more special parts up for sale.<br/>
+      All Parts have been manufactured for independent racing and have not been developed and destructively tested to manufacturing standards so as such no warranty is offered or implied with the sale of these second hand components.
+              </div>
 			
 			
       <div class="grid-span">
@@ -222,6 +223,32 @@
 		    </div>
 			</div>
 			
+      <div class="grid-narrow-center">
+        <h2>Cushless Drive carrier and hub- £390</h2>
+		The cushless drive hub consists of a solid milled 7075 aluminium sprocket carrier complete with modified standard hub and 525 pitch AFAM sprocket. The internal spline was manufactured seperately and pressed to a double lip shoulder under an sweated interference fit of 0.1mm and pinned equidistant in 4 opposing positions. <br/>
+The carrier has completed a total of 4 to 5 hours of dyno testing and approximately 100 miles of racing in the isle of man. I have now moved onto to a larger diameter hub and carrier. <br/>
+This assembly will fit directly into a road or race bike VFR800 or RC45 with no further modifications.
+The difference in feel is remarkable; it gives the rider the a better connection to the road and reduces the vague feeling of power delivery under acceleration. <br/>
+The modification to the standard hub is simply screw cutting the carrier side further between centres as to reduce the overall width of the assembly.
+			<div class="banner">
+			<div class="banner2">
+			<a target="_blank" href="img/carrier.jpg">
+			<img src="img/carrier.jpg" class="category-banner" alt="Carrier"></a>
+			<span class="image-text-banner">Cushless drive kit</span>
+			</div>
+        <div class="banner2">
+			<a target="_blank" href="img/carrier2.jpg">
+			<img src="img/carrier2.jpg" class="category-banner" alt="Carrier"></a>
+			<span class="image-text-banner">Screwcut hub</span>
+			</div>
+        <div class="banner2">
+			<a target="_blank" href="img/carrier3.jpg">
+			<img src="img/carrier3.jpg" class="category-banner" alt="Carrier"></a>
+			<span class="image-text-banner">Inside view</span>
+			</div>
+		    </div>
+			</div>        
+              
 	  		<div class="grid-narrow-center">
         <h2>Race silencers - £450</h2>
 		PARKES exhausts cans with optional db killer inserts. Extensively fabricated from 0.9mm grade 2 titanium. Cans are avaliable in different lengths and mounting options.
