sales hub photos

--- a/Sales.html
+++ b/Sales.html
@@ -232,18 +232,18 @@ The difference in feel is remarkable; it gives the rider the a better connection
 The modification to the standard hub is simply screw cutting the carrier side further between centres as to reduce the overall width of the assembly.
 			<div class="banner">
 			<div class="banner2">
-			<a target="_blank" href="img/carrier.jpg">
-			<img src="img/carrier.jpg" class="category-banner" alt="Carrier"></a>
+			<a target="_blank" href="img/Hub1.jpg">
+			<img src="img/Hub1.jpg" class="category-banner" alt="Carrier"></a>
 			<span class="image-text-banner">Cushless drive kit</span>
 			</div>
         <div class="banner2">
-			<a target="_blank" href="img/carrier2.jpg">
-			<img src="img/carrier2.jpg" class="category-banner" alt="Carrier"></a>
+			<a target="_blank" href="img/Hub2.jpg">
+			<img src="img/Hub2.jpg" class="category-banner" alt="Carrier"></a>
 			<span class="image-text-banner">Screwcut hub</span>
 			</div>
         <div class="banner2">
-			<a target="_blank" href="img/carrier3.jpg">
-			<img src="img/carrier3.jpg" class="category-banner" alt="Carrier"></a>
+			<a target="_blank" href="img/Hub3.jpg">
+			<img src="img/Hub3.jpg" class="category-banner" alt="Carrier"></a>
 			<span class="image-text-banner">Inside view</span>
 			</div>
 		    </div>
