--- a/Sales.html
+++ b/Sales.html
@@ -155,6 +155,16 @@
 			<img src="img/hrcheads.jpg" class="category-banner" alt="HRC cylinder heads"></a>
 			<span class="image-text-banner">HRC kit cylinder heads</span>
 			</div>
+           <div class="banner2">
+			<a target="_blank" href="img/hrcheads2.jpg">
+			<img src="img/hrcheads.jpg" class="category-banner" alt="HRC cylinder heads"></a>
+			<span class="image-text-banner">HRC kit cylinder heads</span>
+			</div>
+           <div class="banner2">
+			<a target="_blank" href="img/936ccdyno.jpg">
+			<img src="img/936ccdyno.jpg" class="category-banner" alt="Dyno"></a>
+			<span class="image-text-banner">Dyno report for these heads and Cams</span>
+			</div>
 		    </div>
 			</div>
 			
@@ -201,8 +211,8 @@
 			<span class="image-text-banner">Front view</span>
 			</div>	
         <div class="banner2">	
-			<a target="_blank" href="img/vfr838dyno.jpg">
-			<img src="img/vfr838dyno.jpg" class="category-banner" alt="Dyno Print"></a>
+			<a target="_blank" href="img/848ccvfrdyno.jpg">
+			<img src="img/848ccvfrdyno.jpg" class="category-banner" alt="Dyno Print"></a>
 			<span class="image-text-banner">VFR838cc dyno print</span>
 			</div>
 		    </div>
@@ -229,7 +239,7 @@
 The carrier has completed a total of 4 to 5 hours of dyno testing and approximately 100 miles of racing in the isle of man. I have now moved onto to a larger diameter hub and carrier. <br/>
 This assembly will fit directly into a road or race bike VFR800 or RC45 with no further modifications.
 The difference in feel is remarkable; it gives the rider the a better connection to the road and reduces the vague feeling of power delivery under acceleration. <br/>
-The modification to the standard hub is simply screw cutting the carrier side further between centres as to reduce the overall width of the assembly.
+The standard hub has been screw cut between centres to extend the threaded section as to reduce the overall width of the assembly.
 			<div class="banner">
 			<div class="banner2">
 			<a target="_blank" href="img/Hub1.jpg">
@@ -250,26 +260,36 @@ The modification to the standard hub is simply screw cutting the carrier side fu
 			</div>        
               
 	  		<div class="grid-narrow-center">
-        <h2>Race silencers - £450</h2>
+        <h2>Race silencers - £450 each</h2>
 		PARKES exhausts cans with optional db killer inserts. Extensively fabricated from 0.9mm grade 2 titanium. Cans are avaliable in different lengths and mounting options.
 		All cans are fabricated and fusion welded by hand so please be aware there is a 4 week lead time for every can made.
 			<div class="image-left-container" width="430px">
             <div class="banner">
 			<div class="banner2">
-			<a target="_blank" href="img/short_silencer2.jpg">
-			<img src="img/short_silencer.jpg" class="category-banner" alt="short silencer"></a>
+			<a target="_blank" href="img/tiex1.jpg">
+			<img src="img/tiex1.jpg" class="category-banner" alt="short silencer"></a>
 			<span class="image-text-banner">Short silencer at 300mm</span>
 			</div>
 			<div class="banner2">
-			<a target="_blank" href="img/long_silencer2.jpg">
-			<img src="img/long_silencer.jpg" class="category-banner" alt="long silencer"></a>
-			<span class="image-text-banner">Longer mid section 400mm</span>
+			<a target="_blank" href="img/tiex4.jpg">
+			<img src="img/tiex4.jpg" class="category-banner" alt="internal view"></a>
+			<span class="image-text-banner">Internal view</span>
 			</div>	
+      <div class="banner2">
+			<a target="_blank" href="img/tiex5.jpg">
+			<img src="img/tiex5.jpg" class="category-banner" alt="welded seams"></a>
+			<span class="image-text-banner">Underside view of welded seams</span>
+			</div>	   
 			<div class="banner2">	
-			<a target="_blank" href="img/silencer_with_mount2.jpg">
-			<img src="img/silencer_with_mount.jpg" class="category-banner" alt="with mounts"></a>
-			<span class="image-text-banner">Silencer with mounting point in either length</span>
-			</div>	
+			<a target="_blank" href="img/tiex3.jpg">
+			<img src="img/tiex3.jpg" class="category-banner" alt="with mounts"></a>
+			<span class="image-text-banner">Silencer with mounting point</span>
+			</div>
+      <div class="banner2">	
+			<a target="_blank" href="img/tiex2.jpg">
+			<img src="img/tiex2.jpg" class="category-banner" alt="with mounts"></a>
+			<span class="image-text-banner">Silencer side view</span>
+			</div>
 			</div>
 		  </div>
 	   </div>
