--- a/Introduction.html
+++ b/Introduction.html
@@ -102,11 +102,10 @@
       <div class="main-container">
         <div class="grid-span">
           <h2>The history behind it</h2>
-          Back in 2012, I started to think that having raced many modern bikes I was lacking the satisfaction I was hoping for when I started racing. Reluctant to pursue a relentless story of refinement from the tune up catalogue I
-          started to think about what was missing from modern motorcycle racing. What if I believed I could build something that would unlock that last tenth of commitment to go faster; something that was novel; experimental parts would be a risk but to go against the grain and start enjoying racing again I purchased an old V4 derived VFR800 that looked like it had been dredged
-          up out of the sea. My plan was to always build a unique chassis but what it would look like and how long it would take were mere minor details; it was going to happen.<br>
-          As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. All components has been designed and made by myself using my own machines; predominantly manual with infrequent CNC work, along with extensive hand fabrication techniques such as welding, brazing, forming, vacuum infusion, clay moulding or for the few components I have
-          not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere. The styling and designs are all my own work; right from the oil pump to the fairings. Some components only see minutes of use only to be stored in wake of new improved designs.
+          I have raced quite a few 'modern bikes' but as I got older I was reluctant to pursue a relentless story of refinement from the tune up catalogue I
+          started to think about what was missing from modern bike racing. What if I could build something that was novel; experimental parts would be a risk but the hope of the underdog beating convention excites more than convention.<br>
+          As the developments have progressed to this day; the only component I am still using from the original VFR800 donor bike is the fuel pump. All components has been designed and made by myself using my own machines; predominantly manual with infrequent CNC work, along with extensive hand fabrication techniques such as welding, brazing, forming, vacuum infusion, clay moulding or for the few components I have
+          not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere. The styling and designs are all my own work; right from the oil pump to the fairings. Some components only see minutes of use, only to be stored in wake of new improved designs.
           <div class="image-right-container" width="350px">
 		  <div class="banner3">
 			<a target="_blank" href="img/0022.jpg">
