hub pic and intro text change

--- a/Gallery.html
+++ b/Gallery.html
@@ -328,6 +328,11 @@
 			<img src="img/swingarm lower.jpg" alt="Parts"></a>
 			<span class="desc">Lower swingarm construction</span>
 			</div>
+      <div class="gallery">
+			<a target="_blank" href="img/hub1.jpg">
+			<img src="img/hub1.jpg" alt="eccentric hub"></a>
+			<span class="desc">Large diameter eccentric hub</span>
+			</div>
 			<div class="gallery">
 			<a target="_blank" href="img/thermostat.jpg">
 			<img src="img/thermostat.jpg" alt="Parts"></a>
