--- a/Introduction.html
+++ b/Introduction.html
@@ -102,10 +102,14 @@
       <div class="main-container">
         <div class="grid-span">
           <h2>The history behind it</h2>
-          I have raced quite a few 'modern bikes' but as I got older I was reluctant to pursue a relentless story of refinement from the tune up catalogue I
-          started to think about what was missing from modern bike racing. What if I could build something that was novel; experimental parts would be a risk but the hope of the underdog beating convention excites more than convention.<br>
-          As the developments have progressed to this day; the only component I am still using from the original VFR800 donor bike is the fuel pump. All components has been designed and made by myself using my own machines; predominantly manual with infrequent CNC work, along with extensive hand fabrication techniques such as welding, brazing, forming, vacuum infusion, clay moulding or for the few components I have
-          not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere. The styling and designs are all my own work; right from the oil pump to the fairings. Some components only see minutes of use, only to be stored in wake of new improved designs.
+          Over the years I have raced quite a few 'modern bikes' but as time went by, I became reluctant to pursue a relentless story of basic refinement. 
+          I think in the 60's and 70's the onus was on the owner to develop their own machine to get the edge over the competitor. These days
+          it's reasonable to assume the factories know best and the individual has little options or parts that money can buy to yield improvements.<br>
+          How do we know for sure that a conventional motorbike geometry gives the best all round performance, it would seem odd that seemingly having tried all
+          possible alternatives that the very first basic layout was the best? <br>
+          There are plenty of good examples of successful home built prototypes across the world; most of which remain out of the spotlight of the media. Experimental parts would be a risk but the hope of the underdog beating convention is exciting.<br>
+          All components has been designed and made by myself using my own machines; predominantly manual with infrequent CNC work, along with extensive hand fabrication techniques such as welding, brazing, forming, vacuum infusion, clay moulding or for the few components I have
+          not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere. The styling and designs are my own work; right from the oil pump to the fairings. Some components only see minutes of use, only to be stored in wake of new improved designs.
           <div class="image-right-container" width="350px">
 		  <div class="banner3">
 			<a target="_blank" href="img/0022.jpg">
@@ -116,14 +120,12 @@
         </div>
         <div class="grid-left-two">
           <h2>The business</h2>
-          I ran an engine tuning workshop and sub contracted as an engineer to make up a busy 7 day working week. In that time I took the VFR in fairly standard trim; albeit with my own fairings, exhaust and mildly tuned engine to the
-          southern 100 amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the VFR. The modern bikes kept me sharp for a while until a foolish crash in the Isle of Man in 2014 prompted me to make a change. When lying
-          in the helicopter on the way Nobles hospital I decided that I was done with the boredom of modern racing. The hay days of sponsered rides were long gone and 
-		  at the time I had spent my hard earned money
-          on my 1 year old Triumph 675R which got me to 15th in the southern 100 supersport 600 class and crashed it before I got a chance to start pushing. <br>
+          I ran an engine tuning workshop and sub contracted as an engineer to make up a busy 7 day working week. In that time I took the bike in fairly standard trim; albeit with my own fairings, exhaust and mildly tuned engine to the
+          Isle of Man amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the bike. The modern bikes kept me sharp for a while until a foolish crash in the Isle of Man in 2014 prompted me to make a change. When lying
+          in the helicopter on the way Nobles hospital I decided that I was done with modern racing. 
 		  At the same time I had learned that working on other people's bikes and turning out tuned engines for club racers wasn't going to teach me more than I already knew.
-          Time for change. You are what you do and to a certain extent; what you look like too. If I was going to work all day, every day; I would look like it! If I only worked on everyone else’s bike I wouldn’t learn how to
-          build a chassis. I see no point in making what others can make better with more finance. That's a guaranteed 2nd place for sure. Money can't buy innovation, which inside a competitive environment comes hand in hand with adversity, risk and failure. All of which are necessary to make the bad; better! 
+          Time for change. You are what you do and to a certain extent; what you look like too. If I was going to work all day, every day on what I already knew; I would look like it! I wouldn’t learn how to
+          design and build a chassis. I see no point in making what others can make better with more finance. That's a guaranteed 2nd place for sure. Money can't buy innovation, which inside a competitive environment comes hand in hand with adversity, risk and failure. All of which are necessary to make the bad; better! 
           
         </div>
       </div>
@@ -138,8 +140,7 @@
 			</div>
           </div>
         
-        Drying the sand and compressing it in to produce a hot bend in T45 tube took a lot of patience and perhaps a year of many bends to get that real feel for what’s
-        going on. Every technical hurdle would spark a spell of research through textbooks but something I was always adamant of was to preserve my focus for first principle; steering away from any prior design. If it exists I’m not interested.
+        Every technical hurdle would spark a spell of research through textbooks but something I was always adamant of was to preserve my focus for first principle; steering away from any prior design. If it exists I’m not interested.
 		That way I felt my mind would have a greater chance of conjuring up something new which wasn’t a result of computer simulation pre-configured, logical algorithms which exist based on old theories. The following years have given me a massive understanding for metallurgy, thermal dynamics, aerodynamics as well as honing my patience. Many engines later and 3 rising rate suspension geometries have taught me a lot
          and testing in the Isle of man has accelerated that rate 10 fold. Take a look at the technical journeys across the site and maybe look out for upcoming events… you’ll hear it coming for sure!
       <p>
