--- a/Swingarm.html
+++ b/Swingarm.html
@@ -160,7 +160,7 @@
 		  Each panel was mocked up in cardboard, plastercene and bodyfiller to begin with before being cut out of sheet 5083. The formed sections were made using an array of different press tools I constructed for the job.
 		  The steel press tools are the best but most expensive and time consuming to make. With a dowel in each corner to guide them together they worked first time.
 		  For the larger top and bottom formed panels I experimented with large concrete moulds which failed spectaculary the first few times; I used my uncle's Manitou as the press which suprisingly wasn't upto it; a 16 tonne machine lifting itself off the ground with my futile 2 foot square concrete press staring back at it without even flinching.
-		  We resorted to some crude agricutural engineering that day; a bucket of spuds dropped at speed with said Manitou. The Manitou just took off quicker, and then the concrete started to crack.
+		  I resorted to some crude agricutural engineering that day; a bucket of spuds dropped at speed with said Manitou. The Manitou just took off quicker, and then the concrete started to crack.
 		  The second revision was a much better success; 6 M16 threaded bars welded to spreader plates only just managed to form the bottom panel with me working overtime with a gas torch on the plate and a 2 foot breaker bar on the clamping nuts. Hot forming was the only way to go with such large complex forms. If it were a production part for a motorcycle you would see a press tool the size of your house to do these parts.
         </div>      
 		
@@ -194,11 +194,17 @@
           <img src="img/swingarm_right.jpg" class="category-banner" alt="The final part"></a>
 		  <span class="image-text-banner">The final product</span>
 		  </div>
+        
+        <div class="banner2">
+		  <a target="_blank" href="img/hub1.jpg">
+          <img src="img/hub1.jpg" class="category-banner" alt="7075 billet eccentric hub"></a>
+		  <span class="image-text-banner">Large diameter eccentric hub</span>
+		  </div>
         </div>
 			
         <div class="grid-left-two">
           <h2>Other additions</h2>
-		  To finish off the fabrication I made a cushless drive sprocket carrier along with a new eccentric hub and spindle of my own design. I would have prefered to use a 7000 series aluminium for the construction of the rear arm; 
+		  To finish off the fabrication I made a cushless drive sprocket carrier along with a new large diameter eccentric hub from 7075 aluminium. I would have prefered to use a 7000 series aluminium sheet for the construction of the rear arm; 
 		  such as 7020. It offers greater tensile strength per relative thickness of section used in comparison to 5083, however 7020 is hard to come by and expensive in particular sizes. It's also likely to require heat treatment and post machining processes 
 		  to compensate for the distortion. Mine will be slightly heavier as a result due to the use of thicker section sizes. It will be favourable to the bikes weight distribution at least, which is currently somewhat biased the front: Cue the carbon front fork project!
         </div>
