sales wording update

--- a/Sales.html
+++ b/Sales.html
@@ -119,8 +119,10 @@
 			
       <div class="grid-span">
         <h2>Tony Scott RC45 52mm stroke crankshaft - £2300</h2>
-		I am led to believe this is the one remaining long stroke RC45 crankshaft; designed by Tony Scott and manufactured by Honda on his behalf. Used by Milky Quale in the isle of man TT and most recently used by myself between 2017-2018. It has now been put up for sale to fund the manufacture of shorter stroke; higher revving engine.
-		What you get is the 52mm stroke crankshaft complete with Carrillo rods and bearing shells. The rods have completed approximately 100 miles of racing from new along with 4 hours of dyno tuning. They were custom made to my design by CP-Carrillo in America for £2000 and are suitable to take both standard and HRC RC45 pistons. The crankshaft is dynamically balanced with lead inserts into the counterweights to suit these rods and HRC pistons
+		I am led to believe this is the one remaining long stroke RC45 crankshaft; designed by Tony Scott and manufactured by Honda on his behalf. Used by Milky Quale in the isle of man TT and most recently used by myself between 2017-2018. It has now been put up for sale to fund the manufacture of shorter stroke; higher revving engine.<br>
+        I have owned this crankshaft for approximately 7 years, I owned and later sold the orignal Tony Scott engine it came from.
+		What you get is the 52mm stroke crankshaft complete with Carrillo rods and bearing shells. The rods have completed approximately 100 miles of racing from new along with 4 hours of dyno tuning. They were custom made to my design by CP-Carrillo in America for £2000 and are suitable to take both standard and HRC RC45 pistons. 
+        The crankshaft is dynamically balanced with lead inserts into the counterweights to suit these rods and HRC pistons. Naturally, it is always advised to check your deck height to ensure safe clearances.
 			<div class="banner">
 			<div class="banner2">
 			<a target="_blank" href="img/52mmcrank2.jpg">
@@ -137,7 +139,7 @@
 	  	  
       <div class="grid-left-two">
         <h2>HRC kit cylinder heads complete - £2600</h2>
-        These are a pair of kit cylinder heads used by Honda racing team. The valve springs, camshafts and spring washers are all HRC kit specification. The valve springs all measure within 0.1mm of each other showing excellent condition.
+        These are a pair of kit cylinder heads used by Honda racing team. The valve springs, camshafts and spring washers are all HRC kit specification. The valve springs all measure within 0.1mm of new free length showing excellent condition.
       The cam sprockets are adjustable and I have set them back to the standard HRC kit specification:<br />
 	  inlet opens 23 btdc<br />
       closes 52 abdc<br />
@@ -147,6 +149,7 @@
 	  The specification of the lift:<br />
 	  Exhaust: 8.5mm <br />
 	  Inlet: 9.5mm <br />
+        I do have a good set of factory flat faced race valves as an optional extra for £250 to fit these heads.
 	  Be advised that you should check your piston to valve clearance on assembly to ensure adequate clearance for your application as the inlet in particular has higher lift than standard
 	  The cam sprockets are interchangable between front and rear cams and allow material to be skimmed off the cylinder head to reduce gear backlash and raise compression. This is achieved due to the cam sprockets being marginally undersize. The amount they are undersize is stamped on each sprocket (0.5mm and 0.6mm options). The sprockets are interchangable between inlet and exhaust aswell as between front and rear cylinder heads.
 			   <div class="banner">
@@ -159,6 +162,16 @@
 			<a target="_blank" href="img/hrcheads2.jpg">
 			<img src="img/hrcheads.jpg" class="category-banner" alt="HRC cylinder heads"></a>
 			<span class="image-text-banner">HRC kit cylinder heads</span>
+			</div>
+           <div class="banner2">
+			<a target="_blank" href="img/hrcheads2.jpg">
+			<img src="img/hrcheads.jpg" class="category-banner" alt="HRC cylinder heads"></a>
+			<span class="image-text-banner">HRC springs</span>
+			</div>
+           <div class="banner2">
+			<a target="_blank" href="img/hrcheads2.jpg">
+			<img src="img/hrcheads.jpg" class="category-banner" alt="HRC cylinder heads"></a>
+			<span class="image-text-banner">HRC camshafts</span>
 			</div>
            <div class="banner2">
 			<a target="_blank" href="img/936ccdyno.jpg">
@@ -220,11 +233,12 @@
 		
       <div class="grid-narrow-center">
         <h2>Slipper clutch conversion (Available mid 2019) - £TBC</h2>
-		This kit comprises a new sand cast outter engine cover. The clutch is a basket is machined from 7075 and hard anodised.
-		The kit is interchangeable between a vfr800 and RC45 using the same plates and spring tension.
-		With these race derived parts you can expect small gains due to a reduction of components creating oil drag and less oil contamination through clutch plate degradation in the oil bath.
-		It would not be suitable to use this kit on the round as inadequate air flow to the clutch pack would cause accelerated damage to the plates.
-			<div class="banner">
+		This kit comprises a new sand cast outter engine cover including full clucth outter and inner basket. The clutch is a basket is machined from 7075 and hard anodised.<br>
+		The assembly is much lighter than standard and uses a direct cushless drive gear.
+        The kit is interchangeable between a vfr800 and RC45 using the same plates and spring tension.
+		With these race derived parts you can expect small gains due to a reduction of components creating oil drag and less oil contamination through clutch plate degradation in the oil bath utilising a novel oil seperation technique.<br>
+		It would not be suitable to use this kit off a race circuit as inadequate air volume at lower rpm to the clutch pack would cause accelerated damage to the plates through overheating.<br>
+        <div class="banner">
 			<div class="banner2">
 			<a target="_blank" href="img/dryclutch2.jpg">
 			<img src="img/dryclutch.jpg" class="category-banner" alt="Dry Clutch kit"></a>
@@ -235,10 +249,11 @@
 			
       <div class="grid-narrow-center">
         <h2>Cushless Drive carrier and hub- £390</h2>
-		The cushless drive hub consists of a solid milled 7075 aluminium sprocket carrier complete with modified standard hub and 525 pitch AFAM sprocket. The internal spline was manufactured seperately and pressed to a double lip shoulder under an sweated interference fit of 0.1mm and pinned equidistant in 4 opposing positions. <br/>
-The carrier has completed a total of 4 to 5 hours of dyno testing and approximately 100 miles of racing in the isle of man. I have now moved onto to a larger diameter hub and carrier. <br/>
+		The cushless drive hub consists of a solid milled 7075 aluminium sprocket carrier complete with modified standard hub and 525 pitch AFAM sprocket. The internal spline was manufactured 
+        seperately and pressed to a double lip shoulder under an sweated interference fit of 0.1mm and pinned equidistant in 4 opposing positions. <br/>
+The carrier has completed a total of 4 hours of dyno testing and approximately 100 miles of racing in the isle of man. I have now moved onto to a larger diameter hub and carrier. <br/>
 This assembly will fit directly into a road or race bike VFR800 or RC45 with no further modifications.
-The difference in feel is remarkable; it gives the rider the a better connection to the road and reduces the vague feeling of power delivery under acceleration. <br/>
+The difference in feel is remarkable; it gives the rider a better connection to the road and reduces the vague feeling of power delivery under acceleration. <br/>
 The standard hub has been screw cut between centres to extend the threaded section as to reduce the overall width of the assembly.
 			<div class="banner">
 			<div class="banner2">
